tests/fixtures/invalid/function_pointer_local_declaration.c
int main(void) {
    int (*callback)(int);
    return 0;
}
